fix(runtime): enforce read-only safety state for invalid descriptors
- InterlisRuntimeSafetyState: valid registry keeps writes enabled;
  strict invalid registry fails startup; non-strict invalid registry
  starts technically read-only
- plugin initializes the state and logs the actual behavior
  (no more claim of per-feature downgrades)
- association/inverse command services return typed read-only results
  with CommandCode.RUNTIME_DESCRIPTOR_INVALID before any write
- flows expose runtimeWriteAllowed() and block create/edit/save/update/
  delete and association/inverse write actions
- GSP views hide create/edit/delete and association actions when
  read-only; RegistryDiagnosticCode gains VALIDATION_INCOMPLETE and
  drops the unused SAFE_DOWNGRADE_VIOLATED